[gd_scene load_steps=8 format=3 uid="uid://te3s2h1che2d"]

[ext_resource type="Script" path="res://characters/multiplayer/multiplayer_player.gd" id="1_ij7lf"]
[ext_resource type="Script" path="res://characters/multiplayer/multiplayer_input.gd" id="2_75sn2"]
[ext_resource type="Script" path="res://characters/components/movement.gd" id="2_coflh"]
[ext_resource type="Texture2D" uid="uid://bvws31lcjjf3a" path="res://assets/knight.png" id="4_vcdwc"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_bcfu3"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:do_jump")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:_is_on_floor")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:direction")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:username")
properties/5/spawn = true
properties/5/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kgm8b"]
properties/0/path = NodePath("InputSynchronizer:input_direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("InputSynchronizer:username")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_72js6"]
radius = 6.0
height = 18.0

[node name="MultiplayerPlayer" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_ij7lf")

[node name="Movement" type="Node" parent="."]
script = ExtResource("2_coflh")

[node name="PlayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_bcfu3")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_kgm8b")
script = ExtResource("2_75sn2")

[node name="CharacterSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1.35525e-20, -9.53674e-07)
texture = ExtResource("4_vcdwc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CapsuleShape2D_72js6")

[node name="WallDetector" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(6, 0)
target_position = Vector2(1, 0)

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Username" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 1.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[connection signal="timeout" from="RespawnTimer" to="." method="_respawn"]
